manifests/ingress-http.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-http
  namespace: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.org/hsts: "false"
    # fixes "413 Request Entity Too Large" error when pushing docker images
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
  # - host: nexus.thehypepipe.co.uk
  # http-web
  - host: __DNS_DOMAIN_NAME__
    http:
      paths:
      - backend:
          serviceName: nexus
          servicePort: 8081
        path: /
  # http-docker
  - host: docker-__DNS_DOMAIN_NAME__
    http:
      paths:
      - backend:
          serviceName: nexus
          servicePort: 8123
        path: /
