manifests/ingress-tls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-__CERT_API_ENVIRONMENT__
    nginx.org/hsts: "false"
    # fixes "413 Request Entity Too Large" error when pushing docker images
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  # can use multiple hosts with a single secret
  - hosts:
    - __DNS_DOMAIN_NAME__
    - docker-__DNS_DOMAIN_NAME__
    secretName: tls-secret
  rules:
  # - host: nexus.thehypepipe.co.uk
  # http-web
  - host: __DNS_DOMAIN_NAME__
    http:
      paths:
      - backend:
          serviceName: nexus
          servicePort: 8081
        path: /
  # http-docker
  - host: docker-__DNS_DOMAIN_NAME__
    http:
      paths:
      - backend:
          serviceName: nexus
          servicePort: 8123
        path: /
